--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
-    "gh-pages": "^6.3.0",
+    "gh-pages": "^3.2.3",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -37,5 +37,8 @@
       "last 1 safari version"
     ]
   },
-  "hompage" : "https://gyuho-han.github.io/react-movie"
+  "hompage": "https://gyuho-han.github.io/react-movie",
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
+  }
 }
